# pypi-browser

./: .gitignore  CHANGELOG.md  README.md  index.html  lzhbrowser.html  pyproject.toml
lzhbaidutranslate.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
lzhbrowser/: __init__.py
site/: lzhbrowser.html  search.js
